name:                cardano-sl-db
version:             2.0.0
synopsis:            Cardano SL - basic DB interfaces
description:         Cardano SL - basic DB interfaces
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pos.DB
                       Pos.DB.BatchOp
                       Pos.DB.Class
                       Pos.DB.Error
                       Pos.DB.Functions
                       Pos.DB.BlockIndex
                       Pos.DB.GState.Common
                       Pos.DB.GState.Lock
                       Pos.DB.GState.Stakes
                       Pos.DB.Misc.Common
                       Pos.DB.Pure
                       Pos.DB.Sum
                       Pos.DB.Rocks
                       Pos.DB.Rocks.Functions
                       Pos.DB.Rocks.Types

                       Pos.DB.Txp
                       Pos.DB.Txp.Logic
                       Pos.DB.Txp.MemState

                       Pos.DB.Txp.Settings
                       Pos.DB.Txp.Stakes
                       Pos.DB.Txp.Utxo

                       Pos.DB.Lrc
                       Pos.DB.Delegation
                       Pos.DB.Ssc
                       Pos.DB.Ssc.SecretStorage
                       Pos.DB.Update
                       Pos.DB.Update.Poll.Logic.Version
                       Pos.DB.Block

                       Pos.DB.Epoch.Index

  other-modules:       Pos.DB.Txp.Logic.Common
                       Pos.DB.Txp.Logic.Global
                       Pos.DB.Txp.Logic.Local
                       Pos.DB.Txp.MemState.Class
                       Pos.DB.Txp.MemState.Holder
                       Pos.DB.Txp.MemState.Metrics
                       Pos.DB.Txp.MemState.Types

                       Pos.DB.Lrc.Common
                       Pos.DB.Lrc.Consumer
                       Pos.DB.Lrc.Consumer.Delegation
                       Pos.DB.Lrc.Consumer.Ssc
                       Pos.DB.Lrc.Consumer.Update
                       Pos.DB.Lrc.Consumer
                       Pos.DB.Lrc.Consumers
                       Pos.DB.Lrc.Context
                       Pos.DB.Lrc.Issuers
                       Pos.DB.Lrc.Leaders
                       Pos.DB.Lrc.Lrc
                       Pos.DB.Lrc.Mode
                       Pos.DB.Lrc.RichmenBase
                       Pos.DB.Lrc.Richmen
                       Pos.DB.Lrc.Seed

                       Pos.DB.Delegation.Cede.Holders
                       Pos.DB.Delegation.Cede.Logic
                       Pos.DB.Delegation.Core
                       Pos.DB.Delegation.Logic.Common
                       Pos.DB.Delegation.Logic.Mempool
                       Pos.DB.Delegation.Logic.VAR
                       Pos.DB.Delegation.Var

                       Pos.DB.Ssc.GState
                       Pos.DB.Ssc.Logic
                       Pos.DB.Ssc.Logic.Global
                       Pos.DB.Ssc.Logic.Local
                       Pos.DB.Ssc.Logic.VAR
                       Pos.DB.Ssc.State
                       Pos.DB.Ssc.State.Global
                       Pos.DB.Ssc.State.Local

                       Pos.DB.Update.Context
                       Pos.DB.Update.GState
                       Pos.DB.Update.Logic
                       Pos.DB.Update.MemState
                       Pos.DB.Update.GState.Misc
                       Pos.DB.Update.Logic.Global
                       Pos.DB.Update.Logic.Local
                       Pos.DB.Update.MemState.Functions
                       Pos.DB.Update.MemState.Types
                       Pos.DB.Update.Poll.DBPoll
                       Pos.DB.Update.Poll.Logic
                       Pos.DB.Update.Poll.PollState
                       Pos.DB.Update.Poll.Pure
                       Pos.DB.Update.Poll.Logic.Apply
                       Pos.DB.Update.Poll.Logic.Base
                       Pos.DB.Update.Poll.Logic.Normalize
                       Pos.DB.Update.Poll.Logic.Rollback
                       Pos.DB.Update.Poll.Logic.Softfork

                       Pos.DB.Block.BListener
                       Pos.DB.Block.Epoch
                       Pos.DB.Block.GState.BlockExtra
                       Pos.DB.Block.GState.SanityCheck
                       Pos.DB.Block.Internal
                       Pos.DB.Block.Load
                       Pos.DB.Block.Logic.Creation
                       Pos.DB.Block.Logic.Header
                       Pos.DB.Block.Logic.Internal
                       Pos.DB.Block.Logic.Util
                       Pos.DB.Block.Logic.VAR
                       Pos.DB.Block.Lrc
                       Pos.DB.Block.Slog.Context
                       Pos.DB.Block.Slog.Logic

  build-depends:       aeson
                     , base
                     , binary
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-chain
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-util
                     , concurrent-extra
                     , conduit
                     , containers
                     , cryptonite
                     , data-default
                     , directory
                     , ekg-core
                     , ether >= 0.5
                     , exceptions
                     , filepath
                     , formatting
                     , lens
                     , lrucache
                     , memory
                     , mmorph
                     , mtl
                     , resourcet
                     , rocksdb-haskell-ng
                     , safe-exceptions
                     , serokell-util
                     , stm
                     , tagged
                     , text
                     , time-units
                     , transformers
                     , universum
                     , unliftio
                     , unordered-containers

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite db-test
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:       Test.Pos.DB.Epoch.Index
                       Test.Pos.DB.Functions
                       Test.Pos.DB.Mode
                       Test.Pos.DB.Update.Poll.Logic.Version
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , cardano-sl-binary
                     , cardano-sl-chain
                     , cardano-sl-chain-test
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-db
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , data-default
                     , filepath
                     , hedgehog
                     , mtl
                     , lens
                     , temporary
                     , universum
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  ghc-options:         -Wall
