name:                cardano-sl-explorer
version:             0.6.2
synopsis:            Cardano explorer
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          IOHK <hi@serokell.io>
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:      Pos.Explorer.Socket
                        Pos.Explorer.Web
                        Pos.Explorer.Web.Api
                        Pos.Explorer.Web.ClientTypes
                        Pos.Explorer.Web.Error
                        Pos.Explorer.Web.TestServer
                        Pos.Explorer.Web.Server

  other-modules:        Pos.Explorer.Aeson.ClientTypes

                        Pos.Explorer.Socket.App
                        Pos.Explorer.Socket.Holder
                        Pos.Explorer.Socket.Methods
                        Pos.Explorer.Socket.Util

                        Pos.Explorer.Web.Transform
  build-depends:        aeson
                      , base
                      , base16-bytestring
                      , binary
                      , bytestring
                      , containers
                      , either
                      , ether >= 0.5.1
                      , exceptions
                      , formatting
                      , lens
                      , log-warper
                      , memory
                      , node-sketch
                      , serokell-util
                      , stm
                      , tagged
                      , text
                      , text-format
                      , time
                      , time-units
                      , transformers
                      , universum
                      , unordered-containers

                      -- cardano sl
                      , cardano-sl
                      , cardano-sl-core
                      , cardano-sl-godtossing
                      , cardano-sl-infra
                      , cardano-sl-db
                      , cardano-sl-ssc
                      , cardano-sl-update

                      -- mtl ++
                      , mtl
                      , lifted-base
                      , monad-control
                      , monad-loops

                      -- servant
                      , servant
                      , servant-server
                      , http-types

                      -- socket-io + deps
                      , socket-io
                      , engine-io
                      , engine-io-wai
                      , wai
                      , wai-cors
                      , warp
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold


executable cardano-explorer
  hs-source-dirs:      src/explorer
  main-is:             Main.hs
  other-modules:       ExplorerOptions
                     , Params
                     , Secrets
  build-depends:       base
                     , bytestring
                     , ether
                     , cardano-sl
                     , cardano-sl-core
                     , cardano-sl-infra
                     , cardano-sl-explorer
                     , cardano-sl-godtossing
                     , cardano-sl-ssc
                     , cardano-sl-update
                     , containers
                     , data-default
                     , formatting
                     , lens
                     , log-warper
                     , mtl
                     , network-transport-tcp
                     , node-sketch
                     , optparse-simple
                     , universum
                     , serokell-util
                     , time
                     , time-units
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable cardano-explorer-hs2purs
  hs-source-dirs:      src/purescript
  main-is:             Main.hs
  other-modules:       PSTypes
                       PSOptions
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-explorer
                     , purescript-bridge
                     , universum
                     , optparse-simple
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable cardano-explorer-swagger
  hs-source-dirs:      src/documentation
  main-is:             Main.hs
  other-modules:       Description
  build-depends:       aeson
                     , base
                     , bytestring
                     , cardano-sl-explorer
                     , lens
                     , swagger2
                     , servant-server
                     , servant-multipart
                     , servant-swagger
                     , servant-swagger-ui
                     , text
                     , universum >= 0.1.11
                     , optparse-applicative
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   NoImplicitPrelude
                        BangPatterns
                        OverloadedStrings

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable cardano-explorer-mock
  hs-source-dirs:      src/mock
  main-is:             Main.hs
  other-modules:
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-explorer
                     , universum
                     , optparse-applicative
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

test-suite cardano-explorer-test
  main-is:             Test.hs
  other-modules:
                       -- Standard module with some magic
                       Spec

                       -- Tests
                       Test.Pos.Explorer.Web.ServerSpec
                       Test.Pos.Explorer.Web.ClientTypesSpec

  type:                exitcode-stdio-1.0
  build-depends:       MonadRandom
                     , QuickCheck
                     , base
                     , bytestring
                     , cardano-sl-explorer
                     , cardano-sl-core
                     , cardano-sl
                     , cborg
                     , cereal
                     , containers
                     , cryptonite
                     , data-default
                     , ether
                     , exceptions
                     , formatting
                     , generic-arbitrary
                     , hspec
                     , kademlia
                     , lens
                     , log-warper
                     , MonadRandom
                     , memory
                     , monad-control
                     , mtl
                     , mmorph
                     , node-sketch
                     , pvss
                     , quickcheck-instances
                     , random
                     , reflection
                     , regex-tdfa
                     , regex-tdfa-text
                     , safecopy
                     , serokell-util >= 0.1.3.4
                     , tagged
                     , text-format
                     , time-units
                     , transformers-base
                     , universum >= 0.1.11
                     , unordered-containers
                     , vector
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

