name:           cardano-sl-faucet
version:        3.0.2
description:    Cardano SL - faucet
license:        MIT
author:         Ben Ford
maintainer:     ben.ford@tweag.io
copyright:      2018 IOHK
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  build-depends:
                      base
                    , QuickCheck
                    , aeson
                    , bytestring
                    , cardano-sl-client
                    , cardano-sl-core
                    , cardano-sl-crypto
                    , cardano-sl-util
                    , cardano-sl-mnemonic
                    , cardano-wallet
                    , connection
                    , cryptonite
                    , data-default
                    , directory
                    , ekg-core
                    , ekg-statsd
                    , filepath
                    , generic-arbitrary
                    , http-api-data
                    , http-client
                    , http-client-tls
                    , http-types
                    , lens
                    , log-warper
                    , memory
                    , mmorph
                    , mtl
                    , neat-interpolation
                    , random
                    , safe-exceptions
                    , servant
                    , servant-client-core
                    , servant-server
                    , servant-swagger
                    , servant-swagger-ui
                    , stm
                    , swagger2
                    , tagged
                    , text
                    , time
                    , tls
                    , universum
                    , wai
                    , wai-app-static
                    , wreq
  exposed-modules:
                      Cardano.Faucet
                    , Cardano.Faucet.Endpoints
                    , Cardano.Faucet.Swagger
                    , Cardano.Faucet.Types.Config
                    , Cardano.Faucet.Types.API
                    , Cardano.Faucet.Types.Recaptcha
                    , Cardano.Faucet.Types
                    , Cardano.Faucet.Metrics
                    , Cardano.Faucet.Init
                    , Cardano.WalletClient
  default-language: Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options: -Wall

executable cardano-faucet
  main-is: Main.hs
  hs-source-dirs:
      server
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                     base
                   , aeson
                   , bytestring
                   , cardano-sl-faucet
                   , cardano-sl-infra
                   , cardano-sl-util
                   , ekg
                   , ekg-statsd
                   , lens
                   , log-warper
                   , mtl
                   , optparse-applicative
                   , servant-server
                   , text
                   , universum
                   , warp
  default-language: Haskell2010
  default-extensions:  NoImplicitPrelude

test-suite faucet-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                     base
                   , QuickCheck
                   , aeson
                   , bytestring
                   , cardano-sl-faucet
                   , hspec
                   , time
                   , universum
  default-language: Haskell2010
  default-extensions:  NoImplicitPrelude
